# cerbere

./: CMakeLists.txt  INSTALL  README.md  cerbere.desktop  cerbere.session  cerbere.vala  meson.build  org.elementary.cerbere.gschema.xml  org.pantheon.cerbere.gschema.xml  wscript
.github/workflows/: main.yml  release.yml
data/: CMakeLists.txt  cerbere.desktop  io.elementary.cerbere.appdata.xml.in  io.elementary.cerbere.desktop  io.elementary.cerbere.desktop.in  io.elementary.cerbere.gschema.xml  meson.build  org.pantheon.cerbere.gschema.xml
debian/: cerbere.1  cerbere.manpages  changelog  control  copyright  io.elementary.cerbere.1  io.elementary.cerbere.manpages  rules  watch
src/: CMakeLists.txt  Cerbere.vala  ProcessInfo.vala  ProcessTimer.vala  ProcessWrapper.vala  SessionManager.vala  SettingsManager.vala  Watchdog.vala  cerbere.vala  meson.build
